--- a/08_File_Processing.ipynb
+++ b/08_File_Processing.ipynb
@@ -29,13 +29,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "on0OBs9S-eiS"
+        "id": "on0OBs9S-eiS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9337d42a-2938-4a43-a197-01c4e62093fa"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-08 06:17:26--  https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3924 (3.8K) [text/plain]\n",
+            "Saving to: ‘CONTRIBUTORS.txt’\n",
+            "\n",
+            "\rCONTRIBUTORS.txt      0%[                    ]       0  --.-KB/s               \rCONTRIBUTORS.txt    100%[===================>]   3.83K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-09-08 06:17:26 (44.2 MB/s) - ‘CONTRIBUTORS.txt’ saved [3924/3924]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -46,13 +68,17 @@
         "infile_pointer = open(\"CONTRIBUTORS.txt\", \"r\")\n",
         "outfile_pointer = open(\"emails-id.txt\", \"w\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4yocH5ViAb-g"
+        "id": "4yocH5ViAb-g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "55df62a1-dc48-4d5b-ea48-b0be3d9e0a4b"
       },
       "source": [
         "for each_line in infile_pointer:\n",
@@ -62,8 +88,103 @@
         "infile_pointer.close()\n",
         "outfile_pointer.close()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Sanjay Ghemawat <sanjay@google.com>\n",
+            "\n",
+            "  Jeff Dean <jeff@google.com>\n",
+            "\n",
+            "  Daniel Dulitz <daniel@google.com>\n",
+            "\n",
+            "  Paul Haahr <haahr@google.com>\n",
+            "\n",
+            "  Corey Anderson <corin@google.com>\n",
+            "\n",
+            "  Kenton Varda <kenton@google.com>\n",
+            "\n",
+            "  Will Robinson <robinson@google.com>\n",
+            "\n",
+            "  Petar Petrov <petar@google.com>\n",
+            "\n",
+            "  Brian Duff <bduff@google.com>\n",
+            "\n",
+            "  Tom Chao <chaot@google.com>\n",
+            "\n",
+            "  Max Cai <maxtroy@google.com>\n",
+            "\n",
+            "  Ulas Kirazci <ulas@google.com>\n",
+            "\n",
+            "  Jason Hsueh <jasonh@google.com>\n",
+            "\n",
+            "  Joseph Schorr <jschorr@google.com>\n",
+            "\n",
+            "  Wenbo Zhu <wenboz@google.com>\n",
+            "\n",
+            "  Scott Bruce <sbruce@google.com>\n",
+            "\n",
+            "  Neal Norwitz <nnorwitz@google.com>\n",
+            "\n",
+            "  Jeffrey Yasskin <jyasskin@google.com>\n",
+            "\n",
+            "  Ambrose Feinstein <ambrose@google.com>\n",
+            "\n",
+            "  Lisa Carey <lcarey@google.com>\n",
+            "\n",
+            "  Gregory Kick <gak@google.com>\n",
+            "\n",
+            "  Kevin Ko <kevin.s.ko@gmail.com>\n",
+            "\n",
+            "  Johan Euphrosine <proppy@aminche.com>\n",
+            "\n",
+            "  Ulrich Kunitz <kune@deine-taler.de>\n",
+            "\n",
+            "  Leandro Lucarella <llucax@gmail.com>\n",
+            "\n",
+            "  Dilip Joseph <dilip.antony.joseph@gmail.com>\n",
+            "\n",
+            "  Brian Atkinson <nairb774@gmail.com>\n",
+            "\n",
+            "  Vincent Choinière <Choiniere.Vincent@hydro.qc.ca>\n",
+            "\n",
+            "  Monty Taylor <monty.taylor@gmail.com>\n",
+            "\n",
+            "  Alek Storm <alek.storm@gmail.com>\n",
+            "\n",
+            "  Oleg Smolsky <oleg.smolsky@gmail.com>\n",
+            "\n",
+            "  Brian Olson <brianolson@google.com>\n",
+            "\n",
+            "  Michael Poole <mdpoole@troilus.org>\n",
+            "\n",
+            "  Wink Saville <wink@google.com>\n",
+            "\n",
+            "  Will Pierce <willp@nuclei.com>\n",
+            "\n",
+            "  Alexandre Vassalotti <alexandre@peadrop.com>\n",
+            "\n",
+            "  Scott Stafford <scott.stafford@gmail.com>\n",
+            "\n",
+            "  Alexander Melnikov <alm@sibmail.ru>\n",
+            "\n",
+            "  Oliver Jowett <oliver.jowett@gmail.com>\n",
+            "\n",
+            "  Evan Jones <evanj@mit.edu>\n",
+            "\n",
+            "  Michael Kucharski <m.kucharski@gmail.com>\n",
+            "\n",
+            "  Kacper Kowalik <xarthisius.kk@gmail.com>\n",
+            "\n",
+            "  William Orr <will@worrbase.com>\n",
+            "\n",
+            "  Andrew Paprocki <andrew@ishiboo.com>\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -82,10 +203,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HDQTnW6fLKWG",
-        "outputId": "00427ee1-b6fe-47be-8d7b-f137cb673381",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d6a93fc-779c-4c3c-8709-3024b1bcee0c"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt"
@@ -96,16 +217,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-09-07 16:13:55--  https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt\n",
+            "--2021-09-08 09:01:57--  https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 43014 (42K) [text/plain]\n",
             "Saving to: ‘sp-imp-spec.txt’\n",
             "\n",
-            "sp-imp-spec.txt     100%[===================>]  42.01K  --.-KB/s    in 0.002s  \n",
+            "\rsp-imp-spec.txt       0%[                    ]       0  --.-KB/s               \rsp-imp-spec.txt     100%[===================>]  42.01K  --.-KB/s    in 0.007s  \n",
             "\n",
-            "2021-09-07 16:13:55 (17.9 MB/s) - ‘sp-imp-spec.txt’ saved [43014/43014]\n",
+            "2021-09-08 09:01:58 (6.20 MB/s) - ‘sp-imp-spec.txt’ saved [43014/43014]\n",
             "\n"
           ]
         }
@@ -114,40 +235,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7f8YuAnVZtJG"
+        "id": "vi_BPYiHqRjl"
       },
       "source": [
         "infile = open(\"sp-imp-spec.txt\", \"r\")\n",
-        "outfile_pointer = open(\"sp-imp-spec.txt.2\", \"w\")"
+        "outfile = open(\"santhu\", \"w\")"
       ],
-      "execution_count": 11,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FCuN0AeEbiea",
-        "outputId": "1ce7333a-27b2-4d8b-cef9-3721fd85b64b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8abdd402-73fb-445a-b20d-a68e15a82594"
       },
       "source": [
         "for each_line in infile:\n",
-        "  if (each_line.count(\"-\")):\n",
-        "    print(each_line)\n",
-        "    outfile_pointer.write(each_line)\n",
+        "  if (each_line.count('-') > 0) and (each_line.count('') > 0):\n",
+        "    print (each_line)\n",
+        "    outfile.write(each_line)\n",
         "infile.close()\n",
-        "outfile_pointer.close()"
+        "outfile.close()"
       ],
-      "execution_count": 12,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA\n",
-            "\n",
             "- How parsing and execution of queries work\n",
             "\n",
             "  - Lex (mentioned above) is the \"compiled\" query, that is the output from\n",
