--- a/Lab2_Module1_HintonHouse.ipynb
+++ b/Lab2_Module1_HintonHouse.ipynb
@@ -85,7 +85,7 @@
         "# set randomseed\n",
         "rng = np.random.default_rng(seed=0)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,22 +96,22 @@
       "source": [
         "# rng = np.random.default_rng(seed=10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Yvd7qFGW13Ul",
-        "outputId": "e39501d1-9b9f-403a-adb4-e54e40f1b884",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e39501d1-9b9f-403a-adb4-e54e40f1b884"
       },
       "source": [
         "rng.random(size=(5, 2)) * 10 +5"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
         " print(dataset.data.shape)\n",
         " print(dataset.target.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
       "source": [
         "dataset.target[12]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +220,7 @@
         "a = np.array([[1, 2, 3, 4, 5]])\n",
         "?a.sum()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "  predlabel = np.array([NN1(x, y, i) for i in testdata])\n",
         "  return predlabel\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "source": [
         "?NN1()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
         "  predlabel = classes[rints]\n",
         "  return predlabel"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "  split2label = label[split2]\n",
         "  return split1data, split1label, split2data, split2label"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
         "print('Number of other samples = ', len(ally))\n",
         "print('Percent of test data = ', len(testlabel)*100/len(dataset.target),'%')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
       "source": [
         "x, y, valdata, vallabel = split(allx, ally, 60/100)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
         "trainAccuracy = Accuracy(y, trainpred)\n",
         "print(\"Train accuracy using random classifier is \", trainAccuracy)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +471,7 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy using random classifier is \", valAccuracy)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,7 +509,7 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy of nearest neighbour is \", valAccuracy)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +546,7 @@
         "testAccuracy = Accuracy(testlabel, testpred)\n",
         "print('Test accuracy is ', testAccuracy)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "\n",
         "#2.) How does the size of the train and validation set affect how well we can predict the accuracy on the test set using the validation set?\n",
         "\n",
-        "ans: validation set when increasing then the train data also will be affected to increase  at the time accuracy may be affected by the increasing the validation data\n",
+        "ans: validation set when increasing then the train data also will be affected to increase  at the time accuracy may be affected by the increasing the validation data (their is no change in both datasets accuracy) \n",
         "\n",
         "\n",
         "#3.) What do you think is a good percentage to reserve for the validation set so that thest two factors are balanced?\n",
@@ -619,7 +619,7 @@
         "    accuracy += Accuracy(vallabel, valpred)\n",
         "  return accuracy/iterations # average of all accuracies"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +636,7 @@
         "testpred = NN(allx, ally, testdata)\n",
         "print('test accuracy is ',Accuracy(testlabel, testpred) )"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,18 +659,17 @@
         "### Questions Set 3:\n",
         "#1. Does averaging the validation accuracy across multiple splits give more consistent results?\n",
         "\n",
-        "ans:) yes the validation accuracy gives multiple splits gives more consistent result. \n",
+        "ans:) yes the validation accuracy across  multiple splits gives more consistent result. \n",
         "\n",
         "#2. Does it give more accurate estimate of test accuracy?\n",
         "\n",
-        "ans:) yes it give accurate test accuracy.\n",
+        "ans:) Test accuracy is depend on validation dataset.\n",
         " \n",
         "#3. What is the effect of the number of iterations on the estimate? Do we get a better estimate with higher iterations?\n",
-        "\n",
-        "\n",
+        "ans: it increases upto one certain stage after it gets stabel .\n",
         "#4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?\n",
         "\n",
-        "ans :) yes as per the previous questions. we can deal with a very small train data set or validation dataset increases the iteration at certain value it be stabel .\n"
+        "ans :)no it cannot deal with small train dataset or validation \n"
       ]
     },
     {
