--- a/FMML_CLF1_Lab4.ipynb
+++ b/FMML_CLF1_Lab4.ipynb
@@ -59,7 +59,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn import datasets"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "167jISBahmSu"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -83,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IoKfdTQrKGnM",
-        "outputId": "e5af5139-3b7a-456a-c072-642d23d50158"
+        "outputId": "120c6a79-8e18-4214-edab-98c9f9b89cc1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,19 +107,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 522
+          "height": 70
         },
         "id": "l1Fp6m9jhrpP",
-        "outputId": "34489b8e-a180-41a9-e78d-424cb2c6a287"
+        "outputId": "9980b15f-c887-4544-f96e-043736a61130"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-8b0c826a-d3ea-488e-8e9f-1a844f313e3a\">\n",
+              "  <div id=\"df-1f1c10d3-b0e7-4177-96e5-51c7aad35838\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -551,7 +551,7 @@
               "</table>\n",
               "<p>569 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b0c826a-d3ea-488e-8e9f-1a844f313e3a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f1c10d3-b0e7-4177-96e5-51c7aad35838')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -602,12 +602,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8b0c826a-d3ea-488e-8e9f-1a844f313e3a button.colab-df-convert');\n",
+              "          document.querySelector('#df-1f1c10d3-b0e7-4177-96e5-51c7aad35838 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8b0c826a-d3ea-488e-8e9f-1a844f313e3a');\n",
+              "          const element = document.querySelector('#df-1f1c10d3-b0e7-4177-96e5-51c7aad35838');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -647,6 +647,14 @@
           },
           "metadata": {},
           "execution_count": 4
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: Total number of columns (31) exceeds max_columns (20) limiting to first (20) columns.\n",
+            "Warning: Total number of columns (31) exceeds max_columns (20) limiting to first (20) columns.\n"
+          ]
         }
       ]
     },
@@ -659,7 +667,7 @@
         "X = cancer.data\n",
         "y = cancer.target"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -671,7 +679,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.33, random_state = 17)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -690,7 +698,7 @@
         "    scores = knn.score(X_test,y_test)\n",
         "    scores_list.append(scores)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -701,7 +709,7 @@
           "height": 388
         },
         "id": "UvD57XSyqSVT",
-        "outputId": "20b8af7e-a718-4a39-acb8-368e2cc9c8ea"
+        "outputId": "e2f3ad0d-d981-4afa-a8cc-f441a4157d61"
       },
       "source": [
         "Accuracy = [x*100 for x in scores_list]\n",
@@ -713,7 +721,7 @@
         "plt.ylabel('Accuracy in %')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,9 +751,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L_PArXY3phVM",
-        "outputId": "7f59faa7-94f0-4bd3-c681-f385dfa9742d"
+        "outputId": "a268e0af-c5a4-4c1c-f351-4587babd7485"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,9 +795,9 @@
           "height": 313
         },
         "id": "KCmXsiag6CXJ",
-        "outputId": "f031009c-6af6-4100-a4ab-0fb92abf66fd"
+        "outputId": "705b2ad9-63b6-4da5-a29c-1c44d23fe228"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +862,7 @@
       "metadata": {
         "id": "SAp-lfCCiced"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -868,9 +876,9 @@
           "height": 295
         },
         "id": "jcNAfOc6ihrv",
-        "outputId": "1db2ea50-85f9-4ada-bd35-279eefaa5f92"
+        "outputId": "60eb5ced-08bb-4fe3-ab0d-ea22c01fb85d"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -904,7 +912,7 @@
       "metadata": {
         "id": "v-i6n6y3swm4"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -923,7 +931,7 @@
       "metadata": {
         "id": "yUQsEfAjsFaS"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -944,9 +952,9 @@
           "height": 388
         },
         "id": "wy9EH2Yms5e_",
-        "outputId": "68b2aa60-a1be-47ed-ca0a-898a1678f0da"
+        "outputId": "c519340a-3367-4f02-d3e9-8088bc6033e4"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,9 +984,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sEEUOUOfs7_E",
-        "outputId": "e3c1058f-5bcb-460f-cf77-ef51da730d68"
+        "outputId": "c58f9fae-f250-418f-8959-f84a131fd36e"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,9 +1027,9 @@
           "height": 313
         },
         "id": "Y51amBOH5AGI",
-        "outputId": "087fe9b9-ec64-4936-c967-d11fbfa35a6d"
+        "outputId": "b06a06ee-3ef3-4629-d8b0-5269d2061425"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1039,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -1090,7 +1098,7 @@
       "metadata": {
         "id": "9xjLYb1ZvaqM"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1115,7 +1123,7 @@
       "metadata": {
         "id": "RB0Te1S8uiT6"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1126,7 +1134,7 @@
           "height": 388
         },
         "id": "UjpQTP7QpokH",
-        "outputId": "4d0614ac-2d1d-4502-ac3c-2f08330d1244"
+        "outputId": "64d5da24-46c2-40c6-dbb5-ce80ef345bb7"
       },
       "source": [
         "Accuracy = [x*100 for x in cv_scores]\n",
@@ -1138,7 +1146,7 @@
         "plt.ylabel('Mean Cross-validation accuracy in %')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1167,9 +1175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U-XBDufnxbuT",
-        "outputId": "4822e0f7-d27b-4e55-f407-4118d833a048"
+        "outputId": "36079c17-521d-4f7b-b0d0-b3aa80094bb6"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,7 +1236,7 @@
       "metadata": {
         "id": "GNe4-JTI0tYh"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1242,7 +1250,7 @@
       "metadata": {
         "id": "dwS4wRtFzUK_"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1253,7 +1261,7 @@
       "metadata": {
         "id": "rVg1mxfc0HgB"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1272,7 +1280,7 @@
       "metadata": {
         "id": "yq6yq6FjzmcR"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1293,9 +1301,9 @@
           "height": 388
         },
         "id": "ID5KNvw5zyOb",
-        "outputId": "b338d285-23c3-49b1-f65c-beb189d36627"
+        "outputId": "0c3e06a6-1049-4ae1-d954-a192e5cc8c7c"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1325,9 +1333,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8tm1WNW1z0I7",
-        "outputId": "c404a57d-359d-476a-f826-54513ec0f416"
+        "outputId": "2f39c7a4-2c9c-4e0e-e77b-a7829cda701f"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1349,7 +1357,7 @@
       "metadata": {
         "id": "8m5kl4pU6oV7"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1361,7 +1369,7 @@
       "metadata": {
         "id": "NIiLVOEPJFLN"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
